--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
+    "bootstrap": "^4.0.0-beta.2",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
     "mobx": "^3.4.0",
@@ -31,6 +32,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
+    "reactstrap": "^5.0.0-alpha.4",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
