--- a/package.json
+++ b/package.json
@@ -24,15 +24,18 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
-    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap": "^3.3.7",
+    "create-react-class": "^15.6.2",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
     "mobx": "^3.4.0",
     "mobx-react": "^4.3.5",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.31.5",
+    "react-bootstrap-date-picker": "github:pushtell/react-bootstrap-date-picker#f622dc8872dd180324ba5d3c295d009848f5814b",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
-    "reactstrap": "^5.0.0-alpha.4",
+    "resolve-url-loader": "^2.2.0",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
